--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-	<h5>Start Ad-Placer!</h5>
+	<h1>T_T</h1>
 	<input type="submit" value="Start" onclick="submit()">
+	<input type="submit" value="Create new Object" onclick="new_object()">
+	<input type="submit" value="Create new Entry" onclick="new_entry()">
+	<input type="submit" value="Update entry" onclick="update_entry()">
 	<a href="test.html">test</a>
+	<br>
+	<img src="data:win11.jpg;base64, {{win11.jpg}}" alt="Image">
 </body>
 </html>
