Now image can be sent from webserver.

--- a/web/index2.html
+++ b/web/index2.html
@@ -18,8 +18,9 @@
 	<a href="test.html">test</a>
 	<br>
 	<canvas id='can' class='canvasRoundCorders'></canvas>
+	<br>
 	<input id='finp' type='file' accept='image/*' onchange="upload()">
 	<br>
-	<img src="win11.jpg" alt="Image">
+	<img src="data:win11.jpg;base64, {{win11.jpg}}" alt="Image">
 </body>
 </html>
