Working sample of database.

--- a/web/index.html
+++ b/web/index.html
@@ -11,15 +11,11 @@
 
 <body>
 	<h1>T_T</h1>
-	<input type="submit" value="Start" onclick="submit()">
-	<input type="submit" value="Create new Object" onclick="new_object()">
-	<input type="submit" value="Create new Entry" onclick="new_entry()">
-	<input type="submit" value="Update entry" onclick="update_entry()">
+	<input type="submit" value="Upload" onclick="upload()">
+	<input type="submit" value="Load" onclick="load()">
+	<input type="submit" value="Query" onclick="query()">
+	<input type="submit" value="Comment" onclick="comment()">
 	<a href="test.html">test</a>
-	<br>
-	<canvas id='can' class='canvasRoundCorders'></canvas>
-	<input id='finp' type='file' accept='image/*' onchange="upload()">
-	<br>
-	<img src="win11.jpg" alt="Image">
+	<img src="st0rm.jpg" alt="Image">
 </body>
 </html>
