--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,6 @@
 	<title> Home </title>
 
 	<link rel="stylesheet" href="style.css">
-	<script src="http://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js" ></script>
 	<script type="text/javascript" src="test.js"></script>
 
 	</script>
@@ -15,7 +14,9 @@
 	<input type="submit" value="Load" onclick="load()">
 	<input type="submit" value="Query" onclick="query()">
 	<input type="submit" value="Comment" onclick="comment()">
-	<a href="test.html">test</a>
-	<img src="st0rm.jpg" alt="Image">
+	<br>
+
+	<input type="file" id="image_input">
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
