--- a/web/index.html
+++ b/web/index.html
@@ -3,20 +3,14 @@
 	<title> Home </title>
 
 	<link rel="stylesheet" href="style.css">
-	<script type="text/javascript" src="test.js"></script>
+	<script type="module" src="api.js"></script>
 
 	</script>
 </head>
 
 <body>
 	<h1>T_T</h1>
-	<input type="submit" value="Upload" onclick="upload()">
-	<input type="submit" value="Load" onclick="load()">
-	<input type="submit" value="Query" onclick="query()">
-	<input type="submit" value="Comment" onclick="comment()">
-	<br>
-
 	<input type="file" id="image_input">
-	<script type="text/javascript" src="script.js"></script>
+	<script type="module" src="script.js"></script>
 </body>
 </html>
