--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,11 @@
 
 <body>
 	<h1>T_T</h1>
-	<input type="file" id="image_input">
+	<input type="file" id="image_input" multiple>
 	<script type="module" src="script.js"></script>
+
+	<input type="submit" id="submit">
+
+	<div id="image"></div>
 </body>
 </html>
