--- a/web/index.html
+++ b/web/index.html
@@ -4,17 +4,9 @@
 
 	<link rel="stylesheet" href="style.css">
 	<script type="module" src="api.js"></script>
-
-	</script>
+	<script type="module" src="config.js"></script>
 </head>
 
 <body>
-	<h1>T_T</h1>
-	<input type="file" id="image_input" multiple>
-	<script type="module" src="script.js"></script>
-
-	<input type="submit" id="submit">
-
-	<div id="image"></div>
 </body>
 </html>
