Added endpoints for each posts.

--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,13 @@
 <head>
 	<title> Home </title>
 
-	<link rel="stylesheet" href="style.css">
 	<script type="module" src="api.js"></script>
 	<script type="module" src="config.js"></script>
 </head>
 
 <body>
+	<input type="submit" id="upload" value="Upload"><br>
+	<input type="submit" id="load"   value="Load"><br>
+	<script type="module" src="script.js"></script>
 </body>
 </html>
