Query by amount is added.

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 <body>
 	<input type="submit" id="upload" value="Upload"><br>
 	<input type="submit" id="load"   value="Load"><br>
+	<input type="submit" id="query"  value="Query"><br>
 	<script type="module" src="script.js"></script>
 </body>
 </html>
